fix: toasts z-index

--- a/src/components/Provider/Provider.module.sass
+++ b/src/components/Provider/Provider.module.sass
@@ -2,3 +2,4 @@
   position: fixed
   bottom: 1.5em
   right: 1.5em
+  z-index: 1000
